--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,27 @@ out/
 
 ### VS Code ###
 .vscode/
+# Compiled class file
+*.class
+
+# Log files
+*.log
+
+# IntelliJ IDEA files
+.idea/
+
+# Eclipse files
+.settings/
+
+# Gradle files
+.gradle/
+build/
+
+# Maven files
+target/
+pom.xml.*
+*.jar
+
+# External dependencies
+/.mvn
+/dependency-reduced-pom.xml
